--- a/publication.html
+++ b/publication.html
@@ -54,6 +54,8 @@
 					<ul>
 						<li>SFPEL-LPI: Sequence-based Feature Projection Ensemble Learning for Predicting LncRNA-Protein Interactions, <i><b>PLOS Computational Biology</b></i>, Nov 2018, Wen Zhang, <b>Xiang Yue</b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang (to appear) </li>
 
+						<li>Manifold regularized matrix factorization for drug-drug interaction prediction, <i><b>Journal of Biomedical Informatics</b></i>, Nov 2018, Wen Zhang, Yanlin Chen, Dingfang Li,  <b>Xiang Yue</b> <a href="https://www.sciencedirect.com/science/article/pii/S1532046418302144" target="_blank"> [Paper]</a></li>
+
 						<li>Predicting drug-disease associations by using similarity constrained matrix factorization, <i><b>BMC Bioinformatics</b></i>, May 2018, Wen Zhang, <b>Xiang Yue</b>, Weiran Lin, Wenjian Wu, Ruoqi Liu, Feng Huang, Feng Liu <a href="./pdf/2018 bmc bioinfo.pdf" target="_blank"> [Paper]</a></li>
 
                         <li>Predicting drug-disease associations and their therapeutic function based on the drug-disease association bipartite network, <i><b>Methods</b></i>, May 2018, Wen Zhang, <b>Xiang Yue</b>,  Feng Huang, Ruoqi Liu, Yanlin Chen, Feng Huang, Chunyang Ruan <a href="https://authors.elsevier.com/c/1XRuA3juFrYwED" target="_blank"> [Paper]</a></li>
