--- a/publication.html
+++ b/publication.html
@@ -40,9 +40,9 @@
 						
 						<li>Prediction of drug-disease associations based on ensemble meta paths and singular value decomposition,  <i><b> The 17th Asia Pacific Bioinformatics Conference (APBC 2019) </b></i>, Jan. 2019, Guangsheng Wu, Juan Liu and <b>Xiang Yue</b> (to appear)
 						
-						<li>Predicting drug-disease associations based on the known association bipartite network,  <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang, <b>Xiang Yue</b>, Yanlin Chen, Weiran Lin, Bolin Li, Feng Liu, Xiaohong Li, (Regualar Paper, Accepted, <b>Rate: 79/414=19.0%</b>)   <a href="./pdf/B293_BIBM2017.pdf"> [Paper]</a>
+						<li>Predicting drug-disease associations based on the known association bipartite network,  <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang, <b>Xiang Yue</b>, Yanlin Chen, Weiran Lin, Bolin Li, Feng Liu, Xiaohong Li, (Regualar Paper, <b>Rate: 79/414=19.0%</b>)   <a href="./pdf/B293_BIBM2017.pdf"> [Paper]</a>
 							<a href="./slide/B293_BIBM2017.pdf" target="_blank"> [Slides]</a></li>
-						<li>Predicting small RNAs in bacteria via sequence learning ensemble method,<i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang,  Jingwen Shi, Guifeng Tang, Wenjian Wu,<b> Xiang Yue</b>, Dingfang Li (Short Paper, Accepted)
+						<li>Predicting small RNAs in bacteria via sequence learning ensemble method,<i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang,  Jingwen Shi, Guifeng Tang, Wenjian Wu,<b> Xiang Yue</b>, Dingfang Li (Short Paper)
 							<a href="./pdf/B315_BIBM2017.pdf" target="_blank"> [Paper]</a>
 							<a href="./slide/B315_BIBM2017.pdf" target="_blank"> [Slides]</a></li>
 					</ul>
@@ -52,7 +52,9 @@
 
 					<h3 class="title">Journal Paper</h3>
 					<ul>
-						<li>SFPEL-LPI: Sequence-based Feature Projection Ensemble Learning for Predicting LncRNA-Protein Interactions, <i><b>PLOS Computational Biology</b></i>, Nov 2018, Wen Zhang, <b>Xiang Yue</b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang (to appear) </li>
+						<li>SFPEL-LPI: Sequence-based Feature Projection Ensemble Learning for Predicting LncRNA-Protein Interactions, <i><b>PLOS Computational Biology</b></i>, Dec 2018, Wen Zhang, <b>Xiang Yue</b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang (to appear) <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank"> [Paper]</a></li>
+
+						<li>Sequence-based bacterial small RNAs prediction using ensemble learning strategies, <i><b>BMC Bioinformatics</b></i>, Dec 2018, Guifeng Tang,  Jingwen Shi, Wenjian Wu, <b>Xiang Yue</b>, Wen Zhang<a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-018-2535-1" target="_blank"> [Paper]</a></li>
 
 						<li>Manifold regularized matrix factorization for drug-drug interaction prediction, <i><b>Journal of Biomedical Informatics</b></i>, Nov 2018, Wen Zhang, Yanlin Chen, Dingfang Li,  <b>Xiang Yue</b> <a href="https://www.sciencedirect.com/science/article/pii/S1532046418302144" target="_blank"> [Paper]</a></li>
 
