--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ var _hmt = _hmt || [];
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
+					<li>[Apr 2019] - Our paper on "Synonym Discovery on Privacy-Aware Clinical Data" has been accepted by <b>SIGKDD 2019</b></i>!
                     <li>[Nov 2018] - Our paper on "LncRNA-Protein interaction prediction" has been accepted by <i><b><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">PLOS Computational Biology</a></b></i>!
                     <li>[Oct 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by <i><b>APBC 2019</b></i> and <i><b>BIBM 2018</b></i></li>
                     <li>[Sept 2018] - I will serve as a PC member for <a href="http://orienta.ugr.es/bibm2018/" target="_blank">BIBM 2018</a></li>
@@ -119,7 +120,7 @@ var _hmt = _hmt || [];
             </div>
 
             <div class="ui section divider"></div>
-            <p>Last Updated: 11/2018
+            <p>Last Updated: 05/2019
         </div>
     </div>
 </div>
