--- a/publication.html
+++ b/publication.html
@@ -36,11 +36,11 @@
 				<div class="content">
 					<h3 class="title">Conference Paper</h3>
 					<ul>
-						<li>Zhen Wang, <b>Xiang Yue</b>, Soheil Moosavinasab, Yungui Huang, Simon Lin and Huan Sun, “SurfCon: Synonym Discovery on Privacy-Aware Clinical Data,” <i><b>The 25th ACM SIGKDD Conference on Knowledge Discovery and Data Mining 2019 (SIGKDD'19, research track, acceptance rate: ~110/~1200=9.2%, oral)</b></i> (to appear)
+						<li>SurfCon: Synonym Discovery on Privacy-Aware Clinical Data, <i><b>The 25th ACM SIGKDD Conference on Knowledge Discovery and Data Mining 2019 (SIGKDD 2019)</b></i>, Zhen Wang, <b>Xiang Yue</b>, Soheil Moosavinasab, Yungui Huang, Simon Lin and Huan Sun (research track, <b>acceptance rate: ~110/~1200=9.2%, oral</b>)
 
 						<li>Prediction of drug-disease associations and their effects by signed network-based nonnegative matrix factorization, <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2018 (BIBM 2018) </b></i>, Dec. 2018, Wen Zhang, Feng Huang, <b>Xiang Yue</b>, Xiaoting Lu, Weitai Yang, Zhishuai Li, and Feng Liu 
 						
-						<li>Prediction of drug-disease associations based on ensemble meta paths and singular value decomposition,  <i><b> The 17th Asia Pacific Bioinformatics Conference (APBC 2019) </b></i>, Jan. 2019, Guangsheng Wu, Juan Liu and <b>Xiang Yue</b>
+						<li>Prediction of drug-disease associations based on ensemble meta paths and singular value decomposition,  <i><b> The 17th Asia Pacific Bioinformatics Conference (APBC 2019) </b></i>, Jan. 2019, Guangsheng Wu, Juan Liu and <b>Xiang Yue</b>, recommended to the journal <b><i>BMC Bioinformatics</i></b>, <a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-019-2644-5"> [Paper]</a>
 						
 						<li>Predicting drug-disease associations based on the known association bipartite network,  <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang, <b>Xiang Yue</b>, Yanlin Chen, Weiran Lin, Bolin Li, Feng Liu, Xiaohong Li, (Regualar Paper, <b>Rate: 79/414=19.0%</b>)   <a href="./pdf/B293_BIBM2017.pdf"> [Paper]</a>
 							<a href="./slide/B293_BIBM2017.pdf" target="_blank"> [Slides]</a></li>
@@ -54,7 +54,7 @@
 
 					<h3 class="title">Journal Paper</h3>
 					<ul>
-						<li>SFPEL-LPI: Sequence-based Feature Projection Ensemble Learning for Predicting LncRNA-Protein Interactions, <i><b>PLOS Computational Biology</b></i>, Dec 2018, Wen Zhang, <b>Xiang Yue</b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang (to appear) <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank"> [Paper]</a></li>
+						<li>SFPEL-LPI: Sequence-based Feature Projection Ensemble Learning for Predicting LncRNA-Protein Interactions, <i><b>PLOS Computational Biology</b></i>, Dec 2018, Wen Zhang, <b>Xiang Yue</b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank"> [Paper]</a></li>
 
 						<li>Sequence-based bacterial small RNAs prediction using ensemble learning strategies, <i><b>BMC Bioinformatics</b></i>, Dec 2018, Guifeng Tang,  Jingwen Shi, Wenjian Wu, <b>Xiang Yue</b>, Wen Zhang<a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-018-2535-1" target="_blank"> [Paper]</a></li>
 
