--- a/publication.html
+++ b/publication.html
@@ -34,38 +34,123 @@
 			<div class="ui top attached">
 
 				<div class="content">
-					<h3 class="title">Conference Paper</h3>
+					<h3 class="title">After joining OSU (PhD Research)</h3>
 					<ul>
-						<li>SurfCon: Synonym Discovery on Privacy-Aware Clinical Data, <i><b>The 25th ACM SIGKDD Conference on Knowledge Discovery and Data Mining 2019 (SIGKDD 2019)</b></i>, Zhen Wang, <b>Xiang Yue</b>, Soheil Moosavinasab, Yungui Huang, Simon Lin and Huan Sun (research track, <b>acceptance rate: ~110/~1200=9.2%, oral</b>)
+                        <li>
+                            <p><a href="#" target="_blank">SurfCon: Synonym Discovery on Privacy-Aware Clinical Data</a><br>
+                                Zhen Wang, <b><u>Xiang Yue</u></b>, Soheil Moosavinasab, Yungui Huang, Simon Lin and Huan Sun<br>
+                                <i>The 25th ACM SIGKDD Conference on Knowledge Discovery and Data Mining 2019</i> (<b>KDD 2019, research track, acceptance rate: ~110/~1200=9.2%, oral</b>)<br>
+                                <a href="https://github.com/yzabc007/SurfCon" target="_blank">Code</a> | <a href="#" target="_blank">Slides</a>
+                            </p>
+                        </li>
+                    </ul>
+                    <div class="ui section divider"></div>
 
-						<li>Prediction of drug-disease associations and their effects by signed network-based nonnegative matrix factorization, <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2018 (BIBM 2018) </b></i>, Dec. 2018, Wen Zhang, Feng Huang, <b>Xiang Yue</b>, Xiaoting Lu, Weitai Yang, Zhishuai Li, and Feng Liu 
-						
-						<li>Prediction of drug-disease associations based on ensemble meta paths and singular value decomposition,  <i><b> The 17th Asia Pacific Bioinformatics Conference (APBC 2019) </b></i>, Jan. 2019, Guangsheng Wu, Juan Liu and <b>Xiang Yue</b>, recommended to the journal <b><i>BMC Bioinformatics</i></b>, <a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-019-2644-5"> [Paper]</a>
-						
-						<li>Predicting drug-disease associations based on the known association bipartite network,  <i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang, <b>Xiang Yue</b>, Yanlin Chen, Weiran Lin, Bolin Li, Feng Liu, Xiaohong Li, (Regualar Paper, <b>Rate: 79/414=19.0%</b>)   <a href="./pdf/B293_BIBM2017.pdf"> [Paper]</a>
-							<a href="./slide/B293_BIBM2017.pdf" target="_blank"> [Slides]</a></li>
-						<li>Predicting small RNAs in bacteria via sequence learning ensemble method,<i><b> IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017) </b></i>, Nov. 2017, Wen Zhang,  Jingwen Shi, Guifeng Tang, Wenjian Wu,<b> Xiang Yue</b>, Dingfang Li (Short Paper)
-							<a href="./pdf/B315_BIBM2017.pdf" target="_blank"> [Paper]</a>
-							<a href="./slide/B315_BIBM2017.pdf" target="_blank"> [Slides]</a></li>
-					</ul>
+                    <h3 class="title">Before joining OSU (Undergraduate Research at WHU)</h3>
+                    <ul>
+                        <li>
+                            <p><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">SFPEL-LPI: Sequence-based Feature Projection Ensemble Learning for Predicting LncRNA-Protein Interactions</a>
+                                <br>
+                                Wen Zhang, <b><u>Xiang Yue</u></b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang
+                                <br>
+                                <i>PLOS Computational Biology</i> (<b>Top journal in bioinformatics</b>)
+                                <br>
+                                <a href="http://bioinfotech.cn/SFPEL-LPI/" target="_blank">Web Server</a> | <a href="https://journals.plos.org/ploscompbiol/article/file?id=10.1371/journal.pcbi.1006616.s001&type=supplementary" target="_blank">Suppl Proof</a> | <a href="http://www.bioinfotech.cn/static/ssgll/download/SFPEL%20code%26dataset.rar" target="_blank">Code&Dataset</a>
+                            </p>
+                        </li>
+
+                        <li>
+                            <p><a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-018-2220-4" target="_blank">Predicting drug-disease associations by using similarity constrained matrix factorization</a>
+                                <br>
+                                Wen Zhang, <b><u>Xiang Yue</u></b>, Weiran Lin, Wenjian Wu, Ruoqi Liu, Feng Huang, Feng Liu
+                                <br>
+                                <i>BMC Bioinformatics</i> (2018 Vol 19:233)
+                                <br>
+                                <a href="http://www.bioinfotech.cn/SCMFDD" target="_blank">Web Server</a> | <a href="http://www.bioinfotech.cn/static/DrugDisease/data/SCMFDD%20Complete%20Data.zip" target="_blank">Data</a>
+                            </p>
+                        </li>
 
 
-					<hr>
+                        <li>
+                            <p><a href="https://www.sciencedirect.com/science/article/pii/S1046202318300045" target="_blank">Predicting drug-disease associations and their therapeutic function based on the drug-disease association bipartite network</a>
+                                <br>
+                                Wen Zhang, <b><u>Xiang Yue</u></b>,  Feng Huang, Ruoqi Liu, Yanlin Chen, Feng Huang, Chunyang Ruan
+                                <br>
+                                <i>Methods</i> (2018 Vol 145:51-59)
+                            </p>
+                        </li>
 
-					<h3 class="title">Journal Paper</h3>
-					<ul>
-						<li>SFPEL-LPI: Sequence-based Feature Projection Ensemble Learning for Predicting LncRNA-Protein Interactions, <i><b>PLOS Computational Biology</b></i>, Dec 2018, Wen Zhang, <b>Xiang Yue</b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang <a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank"> [Paper]</a></li>
+                        <li>
+                            <p><a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-019-2644-5" target="_blank">Prediction of drug-disease associations based on ensemble meta paths and singular value decomposition</a>
+                                <br>
+                                Guangsheng Wu, Juan Liu and <b><u>Xiang Yue</u></b>
+                                <br>
+                                <i>The 17th Asia Pacific Bioinformatics Conference (APBC 2019)</i> (regular paper, recommended to the journal <i>BMC Bioinformatics</i>)
+                            </p>
+                        </li>
 
-						<li>Sequence-based bacterial small RNAs prediction using ensemble learning strategies, <i><b>BMC Bioinformatics</b></i>, Dec 2018, Guifeng Tang,  Jingwen Shi, Wenjian Wu, <b>Xiang Yue</b>, Wen Zhang<a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-018-2535-1" target="_blank"> [Paper]</a></li>
+                        <li>
+                            <p><a href="https://ieeexplore.ieee.org/document/8621191" target="_blank">Prediction of drug-disease associations and their effects by signed network-based nonnegative matrix factorization</a>
+                                <br>
+                                Wen Zhang, Feng Huang, <b><u>Xiang Yue</u></b>, Xiaoting Lu, Weitai Yang, Zhishuai Li, and Feng Liu
+                                <br>
+                                <i>IEEE Internatinal Conference on Bioinformatics and Biomedicine 2018 (BIBM 2018)</i> (short paper)
+                            </p>
+                        </li>
 
-						<li>Manifold regularized matrix factorization for drug-drug interaction prediction, <i><b>Journal of Biomedical Informatics</b></i>, Nov 2018, Wen Zhang, Yanlin Chen, Dingfang Li,  <b>Xiang Yue</b> <a href="https://www.sciencedirect.com/science/article/pii/S1532046418302144" target="_blank"> [Paper]</a></li>
 
-						<li>Predicting drug-disease associations by using similarity constrained matrix factorization, <i><b>BMC Bioinformatics</b></i>, May 2018, Wen Zhang, <b>Xiang Yue</b>, Weiran Lin, Wenjian Wu, Ruoqi Liu, Feng Huang, Feng Liu <a href="./pdf/2018 bmc bioinfo.pdf" target="_blank"> [Paper]</a></li>
 
-                        <li>Predicting drug-disease associations and their therapeutic function based on the drug-disease association bipartite network, <i><b>Methods</b></i>, May 2018, Wen Zhang, <b>Xiang Yue</b>,  Feng Huang, Ruoqi Liu, Yanlin Chen, Feng Huang, Chunyang Ruan <a href="https://authors.elsevier.com/c/1XRuA3juFrYwED" target="_blank"> [Paper]</a></li>
+                        <li>
+                            <p><a href="https://www.researchgate.net/publication/321983280_Predicting_drug-disease_associations_based_on_the_known_association_bipartite_network" target="_blank">Predicting drug-disease associations based on the known association bipartite network</a>
+                                <br>
+                                Wen Zhang, <b><u>Xiang Yue</u></b>, Yanlin Chen, Weiran Lin, Bolin Li, Feng Liu, Xiaohong Li
+                                <br>
+                                <i>IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017)</i> (regular paper, <b>acceptance rate: 79/414=19.0%</b>)
+                                <br>
+                                <a href="./slide/B293_BIBM2017.pdf" target="_blank">Slides</a>
+                            </p>
+                        </li>
 
-                        <li>A unified frame of predicting side effects of drugs by using linear neighborhood similarity, <i><b>BMC Systems Biology</b></i>, Dec. 2017, Wen Zhang, <b>Xiang Yue</b>, Feng Liu, Yanlin Chen, Shikui Tu, Qianlong Qu, Xining Zhang
-							<a href="./pdf/2017 system biology.pdf" target="_blank"> [Paper]</a></li>
+                        <li>
+                            <p><a href="./pdf/B315_BIBM2017.pdf" target="_blank">Predicting small RNAs in bacteria via sequence learning ensemble method</a>
+                                <br>
+                                Wen Zhang,  Jingwen Shi, Guifeng Tang, Wenjian Wu,<b><u>Xiang Yue</u></b>, Dingfang Li
+                                <br>
+                                <i>IEEE Internatinal Conference on Bioinformatics and Biomedicine 2017 (BIBM 2017)</i> (short paper)
+                                <br>
+                                <a href="./slide/B315_BIBM2017.pdf" target="_blank">Slides</a>
+                            </p>
+                        </li>
+
+                        <li>
+                            <p><a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-018-2535-1" target="_blank">Sequence-based bacterial small RNAs prediction using ensemble learning strategies</a>
+                                <br>
+                                Guifeng Tang,  Jingwen Shi, Wenjian Wu, <b><u>Xiang Yue</u></b>, Wen Zhang
+                                <br>
+                                <i>BMC Bioinformatics</i> (2018 Vol 19 (Suppl 20):503)
+                            </p>
+                        </li>
+
+                        <li>
+                            <p><a href="https://www.sciencedirect.com/science/article/pii/S1532046418302144" target="_blank">Manifold regularized matrix factorization for drug-drug interaction prediction</a>
+                                <br>
+                                Wen Zhang, Yanlin Chen, Dingfang Li,  <b><u>Xiang Yue</u></b>
+                                <br>
+                                <i>Journal of Biomedical Informatics</i> (2018 Vol 88: 90-97)
+                            </p>
+                        </li>
+
+
+
+
+                        <li>
+                            <p><a href="https://bmcsystbiol.biomedcentral.com/track/pdf/10.1186/s12918-017-0477-2" target="_blank">A unified frame of predicting side effects of drugs by using linear neighborhood similarity</a>
+                                <br>
+                                Wen Zhang, <b><u>Xiang Yue</u></b>, Feng Liu, Yanlin Chen, Shikui Tu, Qianlong Qu, Xining Zhang
+                                <br>
+                                <i>BMC Systems Biology</i> (2017 Vol 11 (Suppl 6) :101)
+                            </p>
+                        </li>
 
 					</ul>
 
