--- a/publication.html
+++ b/publication.html
@@ -53,7 +53,7 @@
                                 <br>
                                 Wen Zhang, <b><u>Xiang Yue</u></b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang
                                 <br>
-                                <i>PLOS Computational Biology</i> (<b>Top journal in bioinformatics</b>)
+                                <i>PLOS Computational Biology</i> (14 (12): e1006616) <b>(Top journal in bioinformatics</b>)
                                 <br>
                                 <a href="http://bioinfotech.cn/SFPEL-LPI/" target="_blank">Web Server</a> | <a href="https://journals.plos.org/ploscompbiol/article/file?id=10.1371/journal.pcbi.1006616.s001&type=supplementary" target="_blank">Suppl Proof</a> | <a href="http://www.bioinfotech.cn/static/ssgll/download/SFPEL%20code%26dataset.rar" target="_blank">Code&Dataset</a>
                             </p>
