--- a/publication.html
+++ b/publication.html
@@ -66,7 +66,7 @@
                                 <br>
                                 <i>BMC Bioinformatics</i> (2018 Vol 19:233)
                                 <br>
-                                <a href="http://www.bioinfotech.cn/SCMFDD" target="_blank">Web Server</a> | <a href="http://www.bioinfotech.cn/static/DrugDisease/data/SCMFDD%20Complete%20Data.zip" target="_blank">Data</a>
+                                <a href="http://www.bioinfotech.cn/SCMFDD" target="_blank">Web Server</a> | <a href="https://github.com/xiangyue9607/SCMFDD" target="_blank">Code&Datasets</a>
                             </p>
                         </li>
 
