--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?4906e1c9bc7624cd590691d2965ab9f6";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
+<!--<script>-->
+<!--var _hmt = _hmt || [];-->
+<!--(function() {-->
+  <!--var hm = document.createElement("script");-->
+  <!--hm.src = "https://hm.baidu.com/hm.js?4906e1c9bc7624cd590691d2965ab9f6";-->
+  <!--var s = document.getElementsByTagName("script")[0]; -->
+  <!--s.parentNode.insertBefore(hm, s);-->
+<!--})();-->
+<!--</script>-->
 <head>
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.5, user-scalable=yes">
     <meta charset="utf-8">
@@ -120,7 +120,8 @@ var _hmt = _hmt || [];
             </div>
 
             <div class="ui section divider"></div>
-            <p>Last Updated: 05/2019
+            <p>Last Updated: 05/2019</p>
+            <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=YG4fd7cKyrWe5QsX9iygEQ2x0a4jIRTeWb-qYyJ0xsI&cl=ffffff&w=a"></script>
         </div>
     </div>
 </div>
