--- a/index.html
+++ b/index.html
@@ -121,9 +121,11 @@
 
             <div class="ui section divider"></div>
             <p>Last Updated: 05/2019</p>
-            <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=YG4fd7cKyrWe5QsX9iygEQ2x0a4jIRTeWb-qYyJ0xsI&cl=ffffff&w=a"></script>
+            <div class="content" id="visit-map">
+                <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=YG4fd7cKyrWe5QsX9iygEQ2x0a4jIRTeWb-qYyJ0xsI&cl=ffffff&w=a"></script>
+            </div>
+            </div>
         </div>
-    </div>
 </div>
 
 
