--- a/publication.html
+++ b/publication.html
@@ -37,6 +37,14 @@
 					<h3 class="title">After joining OSU (PhD Research)</h3>
 					<ul>
                         <li>
+                            <p><a href="https://arxiv.org/pdf/1906.05017.pdf" target="_blank">Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations</a><br>
+                                <b><u>Xiang Yue</u></b>, Zhen Wang, Jingong Huang, Srinivasan Parthasarathy, Soheil Moosavinasab, Yungui Huang, Simon M. Lin, Wen Zhang, Ping Zhang and Huan Sun<br>
+                                <i>arXiv Preprint</i> <br>
+                                <a href="https://github.com/xiangyue9607/BioNEV" target="_blank">Code&Datasets</a>
+                            </p>
+                        </li>
+
+                        <li>
                             <p><a href="#" target="_blank">SurfCon: Synonym Discovery on Privacy-Aware Clinical Data</a><br>
                                 Zhen Wang, <b><u>Xiang Yue</u></b>, Soheil Moosavinasab, Yungui Huang, Simon Lin and Huan Sun<br>
                                 <i>The 25th ACM SIGKDD Conference on Knowledge Discovery and Data Mining 2019</i> (<b>KDD 2019, research track, acceptance rate: ~110/~1200=9.2%, oral</b>)<br>
