--- a/publication.html
+++ b/publication.html
@@ -45,7 +45,7 @@
                         </li>
 
                         <li>
-                            <p><a href="#" target="_blank">SurfCon: Synonym Discovery on Privacy-Aware Clinical Data</a><br>
+                            <p><a href="https://arxiv.org/pdf/1906.09285.pdf" target="_blank">SurfCon: Synonym Discovery on Privacy-Aware Clinical Data</a><br>
                                 Zhen Wang, <b><u>Xiang Yue</u></b>, Soheil Moosavinasab, Yungui Huang, Simon Lin and Huan Sun<br>
                                 <i>The 25th ACM SIGKDD Conference on Knowledge Discovery and Data Mining 2019</i> (<b>KDD 2019, research track, acceptance rate: ~110/~1200=9.2%, oral</b>)<br>
                                 <a href="https://github.com/yzabc007/SurfCon" target="_blank">Code</a> | <a href="#" target="_blank">Slides</a>
@@ -55,11 +55,12 @@
                     <div class="ui section divider"></div>
 
                     <h3 class="title">Before joining OSU (Undergraduate Research at WHU)</h3>
+                    <p>* indicates the student first author/major contribution</p>
                     <ul>
                         <li>
                             <p><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">SFPEL-LPI: Sequence-based Feature Projection Ensemble Learning for Predicting LncRNA-Protein Interactions</a>
                                 <br>
-                                Wen Zhang, <b><u>Xiang Yue</u></b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang
+                                Wen Zhang, <b><u>Xiang Yue</u>*</b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang
                                 <br>
                                 <i>PLOS Computational Biology</i> (14 (12): e1006616) <b>(Top journal in bioinformatics</b>)
                                 <br>
@@ -70,7 +71,7 @@
                         <li>
                             <p><a href="https://bmcbioinformatics.biomedcentral.com/track/pdf/10.1186/s12859-018-2220-4" target="_blank">Predicting drug-disease associations by using similarity constrained matrix factorization</a>
                                 <br>
-                                Wen Zhang, <b><u>Xiang Yue</u></b>, Weiran Lin, Wenjian Wu, Ruoqi Liu, Feng Huang, Feng Liu
+                                Wen Zhang, <b><u>Xiang Yue</u>*</b>, Weiran Lin, Wenjian Wu, Ruoqi Liu, Feng Huang, Feng Liu
                                 <br>
                                 <i>BMC Bioinformatics</i> (2018 Vol 19:233)
                                 <br>
@@ -82,7 +83,7 @@
                         <li>
                             <p><a href="https://www.sciencedirect.com/science/article/pii/S1046202318300045" target="_blank">Predicting drug-disease associations and their therapeutic function based on the drug-disease association bipartite network</a>
                                 <br>
-                                Wen Zhang, <b><u>Xiang Yue</u></b>,  Feng Huang, Ruoqi Liu, Yanlin Chen, Feng Huang, Chunyang Ruan
+                                Wen Zhang, <b><u>Xiang Yue</u>*</b>,  Feng Huang, Ruoqi Liu, Yanlin Chen, Feng Huang, Chunyang Ruan
                                 <br>
                                 <i>Methods</i> (2018 Vol 145:51-59)
                             </p>
