update ciss project

--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
-                    <li>[JUN 2019] - Check out our comprehensive study "Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations" on <a href="https://arxiv.org/abs/1906.05017" target="_blank"><b>arXiv</b></a></li>
+                    <li>[JUN 2019] - Attend GREAT <a href="http://ciss.deephack.me/">2nd Conversational Intelligence Summer School (CISS)</a> at UMASS Lowell.
+                        Check our project "<a href="ciss_project">ACISSTANT: an intelligent CISS assistant bot!</a>"</li>
+                    <li>[JUN 2019] - Check our comprehensive study "Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations" on <a href="https://arxiv.org/abs/1906.05017" target="_blank"><b>arXiv</b></a></li>
                     <li>[Apr 2019] - Our paper on "Synonym Discovery on Privacy-Aware Clinical Data" has been accepted by <b>SIGKDD 2019</b></li>
                     <li>[Nov 2018] - Our paper on "LncRNA-Protein interaction prediction" has been accepted by <i><b><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">PLOS Computational Biology</a></b></i>!
                     <li>[Oct 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by <i><b>APBC 2019</b></i> and <i><b>BIBM 2018</b></i></li>
