update ciss project

--- a/ciss_project.html
+++ b/ciss_project.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.5, user-scalable=yes">
     <meta charset="utf-8">
     <title>Xiang Yue's Homepage</title>
-    <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.css">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.js"></script>
@@ -33,7 +33,7 @@
             for chit-chat and answering summer camp questions
         </p>
         <address>
-            Project in the <a href="http://ciss.deephack.me/">2nd Conversational Intelligence Summer School (CISS)</a> at UMASS Lowell.
+            Project in the <a href="http://ciss.deephack.me/" target="_blank">2nd Conversational Intelligence Summer School (CISS)</a> at UMASS Lowell.
         </address>
     </div>
 </div>
