--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 href="https://u.osu.edu/ihudas/" target="_blank">Honored to be part of the wonderful team!</a></p>
 
                             <!--<i class="linkify icon"></i><a href="https://www.researchgate.net/profile/Xiang_Yue6" target="_blank">Researchgate</a>-->
-                            <!--<i class="github icon"></i><a href="https://github.com/Tommy9607" target="_blank">Github</a>-->
+                            <i class="github icon"></i><a href="https://github.com/xiangyue9607" target="_blank">Github</a>
 
                         <!--</p>-->
                     </div>
