--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="ui grid">
                 <div class="sixteen wide mobile four wide tablet four wide computer column center aligned ">
                     <br>
-                    <div class="ui small circular image" id="profile">
-                        <img src="./images/yue.jpg">
+                    <div class="ui circular image" id="profile">
+                        <img src="./images/yuexiang.jpg">
                     </div>
                 </div>
                 <div class="sixteen wide mobile twelve wide tablet twelve wide computer column">
