--- a/ciss_project.html
+++ b/ciss_project.html
@@ -6,8 +6,8 @@
     <title>Xiang Yue's Homepage</title>
     <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.css">
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.js"></script>
+    <script src="./stylesheets/jquery.js"></script>
+    <script src="./stylesheets/semantic.js"></script>
 </head>
 <body>
 
