--- a/publication.html
+++ b/publication.html
@@ -3,10 +3,10 @@
 <head>
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
 	<title>Xiang Yue's Homepage</title>
-	<link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.css">
-	<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.js"></script>
+    <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.css">
+    <script src="./stylesheets/jquery.js"></script>
+    <script src="./stylesheets/semantic.js"></script>
 </head>
 <body>
 
@@ -48,7 +48,7 @@
                             <p><a href="https://arxiv.org/pdf/1906.09285.pdf" target="_blank">SurfCon: Synonym Discovery on Privacy-Aware Clinical Data</a><br>
                                 Zhen Wang, <b><u>Xiang Yue</u></b>, Soheil Moosavinasab, Yungui Huang, Simon Lin and Huan Sun<br>
                                 <i>The 25th ACM SIGKDD Conference on Knowledge Discovery and Data Mining 2019</i> (<b>KDD 2019, research track, acceptance rate: ~110/~1200=9.2%, oral</b>)<br>
-                                <a href="https://github.com/yzabc007/SurfCon" target="_blank">Code</a> | <a href="#" target="_blank">Slides</a>
+                                <a href="https://github.com/zhenwang9102/SurfCon" target="_blank">Code</a> | <a href="#" target="_blank">Slides</a>
                             </p>
                         </li>
                     </ul>
