--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Xiang Yue's Homepage</title>
     <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.css">
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.js"></script>
+    <script src="./stylesheets/jquery.js"></script>
+    <script src="./stylesheets/semantic.js"></script>
 </head>
 <body>
 
@@ -79,16 +79,18 @@
             <div class="content">
                 <h3>Bio</h3>
                 <p>
-                    I'm currently a first-year PhD student in the <a href="https://cse.osu.edu/" target="_blank">Department
+                    I'm currently a second-year PhD student in the <a href="https://cse.osu.edu/" target="_blank">Department
                     of Computer Science and Engineering</a> at The Ohio State University (OSU). I'm fortunately working
-                    with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> to explore
-                    more in Data Mining.
+                    with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a>.
+                    I have broad interests in Data Mining and NLP, as well as their applications in real-world problems.
+                    Specifically, we are currently doing Information Extraction and Question Answering based on unstructured and structured
+                    clinical data. We aim to build machine learning models to help doctors and physicians do better clinical decision making.
                 </p>
                 <p>
                     Prior to joining OSU, I received my B.E. in the <a href="http://cs.whu.edu.cn/" target="_blank">School
-                    of Computer Science</a> at Wuhan University (WHU), China in 2018. At WHU, I worked with <a
-                        href="http://bioinfotech.cn/en/" target="_blank">Prof. Wen Zhang</a> in Biomedical Big Data
-                    Mining Lab (BBDM-Lab). We adopted many data mining technologies, i.e. recommender systems, graph and
+                    of Computer Science</a> at Wuhan University (WHU), China in 2018. At WHU, I worked with <a href="http://zhangwenlab.cn/indexe.html">Prof. Wen Zhang</a> in
+                    <a href="http://bioinfotech.cn/en/" target="_blank">Biomedical Big Data
+                        Mining Lab (BBDM-Lab)</a>. We adopted many data mining technologies, i.e. recommender systems, graph and
                     network models to solve problems in medicine and biology.
                 </p>
 
@@ -99,6 +101,7 @@
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
+                    <li>[AUG 2019] - Attend SIGKDD 2019 conference at Anchorage, Alaska. Honored to receive KDD Student Travel Award!
                     <li>[JUN 2019] - Attend GREAT <a href="http://ciss.deephack.me/" target="_blank">2nd Conversational Intelligence Summer School (CISS)</a> at UMASS Lowell.
                         Check our project "<a href="ciss_project" target="_blank">ACISSTANT: an intelligent CISS assistant bot!</a>"</li>
                     <li>[JUN 2019] - Check our comprehensive study "Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations" on <a href="https://arxiv.org/abs/1906.05017" target="_blank"><b>arXiv</b></a></li>
