--- a/misc.html
+++ b/misc.html
@@ -3,10 +3,10 @@
 <head>
 	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>Xiang Yue's Homepage</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.css">
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.js"></script>
+    <script src="./stylesheets/jquery.js"></script>
+    <script src="./stylesheets/semantic.js"></script>
 </head>
 <body>
 
@@ -34,6 +34,7 @@
         <div class="ui top attached">
             <div class="content">
                 <ul>
+                    <li>Aug 2019, SIGKDD 2019 Student Travel Award </li>
                     <li>June 2018, Excellent Graduation Thesis Award of WHU (Scale: 5%)</li>
                     <li>May 2018, Outstanding Graduates of WHU (Scale: 10%)</li>
                     <li>2016-2017, LEI JUN Scholarship (Scale: Top1 Winner of National Scholarship, the highest prize for
