--- a/misc.html
+++ b/misc.html
@@ -48,6 +48,21 @@
             </div>
         </div>
 
+
+
+
+        <div class="ui huge header">Academic Services</div>
+        <div class="ui section divider"></div>
+        <div class="ui top attached">
+            <div class="content">
+                <ul>
+                    <li>Program Committee/Reviewer: BMC Medical Informatics and Decision Making, BIBM 2018  </li>
+                    <li>External/Secondary Reviewer: KDD 2019, Neurocomputing, BMC Bioinformatics, BMC Systems
+                        Biology</li>
+                </ul>
+            </div>
+        </div>
+
         <div class="ui huge header">Teaching</div>
         <div class="ui section divider"></div>
         <div class="ui top attached">
@@ -58,6 +73,7 @@
                 </ul>
             </div>
         </div>
+
     </div>
 
 
