--- a/publication.html
+++ b/publication.html
@@ -39,7 +39,7 @@
                         <li>
                             <p><a href="https://arxiv.org/pdf/1906.05017.pdf" target="_blank">Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations</a><br>
                                 <b><u>Xiang Yue</u></b>, Zhen Wang, Jingong Huang, Srinivasan Parthasarathy, Soheil Moosavinasab, Yungui Huang, Simon M. Lin, Wen Zhang, Ping Zhang and Huan Sun<br>
-                                <i>arXiv Preprint</i> <br>
+                                <i>Bioinformatics</i> <br>
                                 <a href="https://github.com/xiangyue9607/BioNEV" target="_blank">Code&Datasets</a>
                             </p>
                         </li>
