--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
+                    <li>[Sept 2019] - Our paper "Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations" has been accepted to <b>Bioinformatics</b>.
+                        Check out our <b>Graph Embedding Evaluation</b> Python package <a href="https://github.com/xiangyue9607/BioNEV"> BioNEV </a> on GitHub!  </li>
                     <li>[AUG 2019] - Attend SIGKDD 2019 conference at Anchorage, Alaska. Honored to receive KDD Student Travel Award!
                     <li>[JUN 2019] - Attend GREAT <a href="http://ciss.deephack.me/" target="_blank">2nd Conversational Intelligence Summer School (CISS)</a> at UMASS Lowell.
                         Check our project "<a href="ciss_project" target="_blank">ACISSTANT: an intelligent CISS assistant bot!</a>"</li>
-                    <li>[JUN 2019] - Check our comprehensive study "Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations" on <a href="https://arxiv.org/abs/1906.05017" target="_blank"><b>arXiv</b></a></li>
                     <li>[Apr 2019] - Our paper on "Synonym Discovery on Privacy-Aware Clinical Data" has been accepted by <b>SIGKDD 2019</b></li>
                     <li>[Nov 2018] - Our paper on "LncRNA-Protein interaction prediction" has been accepted by <i><b><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">PLOS Computational Biology</a></b></i>!
                     <li>[Oct 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by <i><b>APBC 2019</b></i> and <i><b>BIBM 2018</b></i></li>
