--- a/misc.html
+++ b/misc.html
@@ -18,7 +18,7 @@
         <a class="item" href="/"><i class="home icon"></i>Home</a>
         <a class="item" href="publication"><i class="file text icon"></i>Publication</a>
         <a class="item" href="talk"><i class="bell icon"></i>Talk</a>
-        <a class="item" href="misc"><i class="trophy icon"></i>Misc.</a>
+        <a class="item" href="misc"><i class="certificate icon"></i>Misc.</a>
         <a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
 
     </div>
@@ -28,6 +28,18 @@
 
     <div class="ui main text container">
 
+        <div class="ui huge header">Academic Services</div>
+        <div class="ui section divider"></div>
+        <div class="ui top attached">
+            <div class="content">
+                <ul>
+                    <li><b>Program Committee/Reviewer</b>: Bioinformatics, Nature Scientific Reports, ACM Transactions on Computing for Healthcare,
+                        BMC Medical Informatics and Decision Making, AMIA 2020, BIBM 2018,2020  </li>
+                    <li>External/Secondary Reviewer: KDD 2020, 2019, Neurocomputing, BMC Bioinformatics, BMC Systems
+                        Biology</li>
+                </ul>
+            </div>
+        </div>
 
         <div class="ui huge header">Award</div>
         <div class="ui section divider"></div>
@@ -48,20 +60,6 @@
             </div>
         </div>
 
-
-
-
-        <div class="ui huge header">Academic Services</div>
-        <div class="ui section divider"></div>
-        <div class="ui top attached">
-            <div class="content">
-                <ul>
-                    <li>Program Committee/Reviewer: BMC Medical Informatics and Decision Making, BIBM 2018  </li>
-                    <li>External/Secondary Reviewer: KDD 2019, Neurocomputing, BMC Bioinformatics, BMC Systems
-                        Biology</li>
-                </ul>
-            </div>
-        </div>
 
         <div class="ui huge header">Teaching</div>
         <div class="ui section divider"></div>
