--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="item" href="/"><i class="home icon"></i>Home</a>
         <a class="item" href="publication"><i class="file text icon"></i>Publication</a>
         <a class="item" href="talk"><i class="bell icon"></i>Talk</a>
-        <a class="item" href="misc"><i class="trophy icon"></i>Misc.</a>
+        <a class="item" href="misc"><i class="certificate icon"></i>Misc.</a>
         <a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
 
     </div>
@@ -46,7 +46,7 @@
                 <div class="sixteen wide mobile four wide tablet four wide computer column center aligned ">
                     <br>
                     <div class="ui circular image" id="profile">
-                        <img src="./images/yuexiang.jpg">
+                        <img src="./images/yuexiang2.jpg">
                     </div>
                 </div>
                 <div class="sixteen wide mobile twelve wide tablet twelve wide computer column">
@@ -81,7 +81,7 @@
                 <p>
                     I'm currently a second-year PhD student in the <a href="https://cse.osu.edu/" target="_blank">Department
                     of Computer Science and Engineering</a> at The Ohio State University (OSU). I'm fortunately working
-                    with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a>.
+                    with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> in <a href="https://u.osu.edu/ihudas/" target="_blank">SunLab</a>.
                     I have broad interests in Data Mining and NLP, as well as their applications in real-world problems.
                     Specifically, we are currently doing Information Extraction and Question Answering based on unstructured and structured
                     clinical data. We aim to build machine learning models to help doctors and physicians do better clinical decision making.
@@ -101,13 +101,15 @@
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
+                    <li>[April 2020] - Our paper "Clinical Reading Comprehension: A Thorough Analysis of the emrQA Dataset" has been accepted to <b>ACL 2020</b>!
+                        We conduct a comprehensive study on the Clinical Reading Comprehension task based on the recently-released <b>emrQA</b> dataset!
                     <li>[Sept 2019] - Our paper "Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations" has been accepted to <b>Bioinformatics</b>.
                         Check out our <b>Graph Embedding Evaluation</b> Python package <a href="https://github.com/xiangyue9607/BioNEV"> BioNEV </a> on GitHub!  </li>
                     <li>[AUG 2019] - Attend SIGKDD 2019 conference at Anchorage, Alaska. Honored to receive KDD Student Travel Award!
                     <li>[JUN 2019] - Attend GREAT <a href="http://ciss.deephack.me/" target="_blank">2nd Conversational Intelligence Summer School (CISS)</a> at UMASS Lowell.
                         Check our project "<a href="ciss_project" target="_blank">ACISSTANT: an intelligent CISS assistant bot!</a>"</li>
-                    <li>[Apr 2019] - Our paper on "Synonym Discovery on Privacy-Aware Clinical Data" has been accepted by <b>SIGKDD 2019</b></li>
-                    <li>[Nov 2018] - Our paper on "LncRNA-Protein interaction prediction" has been accepted by <i><b><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">PLOS Computational Biology</a></b></i>!
+                    <li>[Apr 2019] - Our paper "Synonym Discovery on Privacy-Aware Clinical Data" has been accepted by <b>SIGKDD 2019</b></li>
+                    <li>[Nov 2018] - Our paper "LncRNA-Protein interaction prediction" has been accepted by <i><b><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">PLOS Computational Biology</a></b></i>!
                     <li>[Oct 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by <i><b>APBC 2019</b></i> and <i><b>BIBM 2018</b></i></li>
                     <li>[Sept 2018] - I will serve as a PC member for <a href="http://orienta.ugr.es/bibm2018/" target="_blank">BIBM 2018</a></li>
                     <li>[Aug 2018] - Join <a href="https://cse.osu.edu/" target="_blank">OSU</a> and start the new journey!</li>
