--- a/publication.html
+++ b/publication.html
@@ -10,7 +10,6 @@
 </head>
 <body>
 
-
 			<!-- header -->
 
 
@@ -20,7 +19,7 @@
 					<a class="item" href="/"><i class="home icon"></i>Home</a>
 					<a class="item" href="publication"><i class="file text icon"></i>Publication</a>
 					<a class="item" href="talk"><i class="bell icon"></i>Talk</a>
-					<a class="item" href="misc"><i class="trophy icon"></i>Misc.</a>
+					<a class="item" href="misc"><i class="certificate icon"></i>Misc.</a>
 					<a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
 
 				</div>
@@ -37,9 +36,17 @@
 					<h3 class="title">After joining OSU (PhD Research)</h3>
 					<ul>
                         <li>
+                            <p><a href="https://arxiv.org/abs/2005.00574" target="_blank">Clinical Reading Comprehension: A Thorough Analysis of the emrQA Dataset</a><br>
+                                <b><u>Xiang Yue</u></b>, Bernal Jimenez Gutierrez and Huan Sun<br>
+                                <i>The 58th Annual Meeting of the Association for Computational Linguistics<b> (ACL 2020)</b></i><br>
+                                <a href="https://github.com/xiangyue9607/CliniRC" target="_blank">Code</a>
+                            </p>
+                        </li>
+
+                        <li>
                             <p><a href="https://arxiv.org/pdf/1906.05017.pdf" target="_blank">Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations</a><br>
                                 <b><u>Xiang Yue</u></b>, Zhen Wang, Jingong Huang, Srinivasan Parthasarathy, Soheil Moosavinasab, Yungui Huang, Simon M. Lin, Wen Zhang, Ping Zhang and Huan Sun<br>
-                                <i>Bioinformatics</i> <br>
+                                <i><b>Bioinformatics</b></i> (Vol 36 Issue 4, 15 Feb 2020, Page 1241-1251) <b>(Impact Factor: 4.531</b>) <br>
                                 <a href="https://github.com/xiangyue9607/BioNEV" target="_blank">Code&Datasets</a>
                             </p>
                         </li>
@@ -62,7 +69,7 @@
                                 <br>
                                 Wen Zhang, <b><u>Xiang Yue</u>*</b>, Guifeng Tang, Wenjian Wu, Feng Huang, Xining Zhang
                                 <br>
-                                <i>PLOS Computational Biology</i> (14 (12): e1006616) <b>(Top journal in bioinformatics</b>)
+                                <i>PLOS Computational Biology</i> (14 (12): e1006616) <b>(Impact Factor: 4.428</b>)
                                 <br>
                                 <a href="http://bioinfotech.cn/SFPEL-LPI/" target="_blank">Web Server</a> | <a href="https://journals.plos.org/ploscompbiol/article/file?id=10.1371/journal.pcbi.1006616.s001&type=supplementary" target="_blank">Suppl Proof</a> | <a href="http://www.bioinfotech.cn/static/ssgll/download/SFPEL%20code%26dataset.rar" target="_blank">Code&Dataset</a>
                             </p>
