--- a/publication.html
+++ b/publication.html
@@ -39,7 +39,14 @@
                             <p><a href="https://arxiv.org/abs/2005.00574" target="_blank">Clinical Reading Comprehension: A Thorough Analysis of the emrQA Dataset</a><br>
                                 <b><u>Xiang Yue</u></b>, Bernal Jimenez Gutierrez and Huan Sun<br>
                                 <i>The 58th Annual Meeting of the Association for Computational Linguistics<b> (ACL 2020)</b></i><br>
-                                <a href="https://github.com/xiangyue9607/CliniRC" target="_blank">Code</a>
+                                <a href="https://github.com/xiangyue9607/CliniRC" target="_blank">[Code]</a>
+                            </p>
+                        </li>
+
+                        <li>
+                            <p><a href="https://arxiv.org/abs/2003.03235" target="_blank">Practical Annotation Strategies for Question Answering Datasets</a><br>
+                                Bernhard Kratzwald, <b><u>Xiang Yue</u></b>, Huan Sun and Stefan Feuerriegel<br>
+                                <i><b>arXiv Preprint</b></i><br>
                             </p>
                         </li>
 
@@ -47,7 +54,7 @@
                             <p><a href="https://arxiv.org/pdf/1906.05017.pdf" target="_blank">Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations</a><br>
                                 <b><u>Xiang Yue</u></b>, Zhen Wang, Jingong Huang, Srinivasan Parthasarathy, Soheil Moosavinasab, Yungui Huang, Simon M. Lin, Wen Zhang, Ping Zhang and Huan Sun<br>
                                 <i><b>Bioinformatics</b></i> (Vol 36 Issue 4, 15 Feb 2020, Page 1241-1251) <b>(Impact Factor: 4.531</b>) <br>
-                                <a href="https://github.com/xiangyue9607/BioNEV" target="_blank">Code&Datasets</a>
+                                <a href="https://github.com/xiangyue9607/BioNEV" target="_blank">[Code&Datasets]</a>
                             </p>
                         </li>
 
@@ -55,7 +62,7 @@
                             <p><a href="https://arxiv.org/pdf/1906.09285.pdf" target="_blank">SurfCon: Synonym Discovery on Privacy-Aware Clinical Data</a><br>
                                 Zhen Wang, <b><u>Xiang Yue</u></b>, Soheil Moosavinasab, Yungui Huang, Simon Lin and Huan Sun<br>
                                 <i>The 25th ACM SIGKDD Conference on Knowledge Discovery and Data Mining 2019</i> (<b>KDD 2019, research track, acceptance rate: ~110/~1200=9.2%, oral</b>)<br>
-                                <a href="https://github.com/zhenwang9102/SurfCon" target="_blank">Code</a> | <a href="#" target="_blank">Slides</a>
+                                <a href="https://github.com/zhenwang9102/SurfCon" target="_blank">[Code]</a> | <a href="https://zhenwang9102.github.io/pdf/KDD2019_ZW_SurfCon_Slides.pdf" target="_blank">[Slides]</a>
                             </p>
                         </li>
                     </ul>
