--- a/publication.html
+++ b/publication.html
@@ -38,7 +38,7 @@
                         <li>
                             <p><a href="https://arxiv.org/abs/2005.00574" target="_blank">Clinical Reading Comprehension: A Thorough Analysis of the emrQA Dataset</a><br>
                                 <b><u>Xiang Yue</u></b>, Bernal Jimenez Gutierrez and Huan Sun<br>
-                                <i>The 58th Annual Meeting of the Association for Computational Linguistics<b> (ACL 2020)</b></i><br>
+                                <i>The 58th Annual Meeting of the Association for Computational Linguistics<b> (ACL 2020, long paper)</b></i><br>
                                 <a href="https://github.com/xiangyue9607/CliniRC" target="_blank">[Code]</a>
                             </p>
                         </li>
