--- a/ciss_project.html
+++ b/ciss_project.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 
-<div class="ui fixed fitted top five item menu borderless">
+<div class="ui fixed fitted top four item menu borderless">
     <div class="ui container">
 
         <a class="item" href="/"><i class="home icon"></i>Home</a>
         <a class="item" href="publication"><i class="file text icon"></i>Publication</a>
-        <a class="item" href="talk"><i class="bell icon"></i>Talk</a>
+        <!--<a class="item" href="talk"><i class="bell icon"></i>Talk</a>-->
         <a class="item" href="misc"><i class="certificate icon"></i>Misc.</a>
         <a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
 
