--- a/misc.html
+++ b/misc.html
@@ -12,12 +12,12 @@
 
 
 <!-- header -->
-<div class="ui fixed fitted top five item menu borderless">
+<div class="ui fixed fitted top four item menu borderless">
     <div class="ui container">
 
         <a class="item" href="/"><i class="home icon"></i>Home</a>
         <a class="item" href="publication"><i class="file text icon"></i>Publication</a>
-        <a class="item" href="talk"><i class="bell icon"></i>Talk</a>
+        <!--<a class="item" href="talk"><i class="bell icon"></i>Talk</a>-->
         <a class="item" href="misc"><i class="certificate icon"></i>Misc.</a>
         <a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
 
@@ -33,10 +33,26 @@
         <div class="ui top attached">
             <div class="content">
                 <ul>
-                    <li><b>Program Committee/Reviewer</b>: Bioinformatics, Nature Scientific Reports, ACM Transactions on Computing for Healthcare,
-                        BMC Medical Informatics and Decision Making, AMIA 2020, BIBM 2018,2020  </li>
-                    <li>External/Secondary Reviewer: KDD 2020, 2019, Neurocomputing, BMC Bioinformatics, BMC Systems
-                        Biology</li>
+                    <li><b>Program Committee/Reviewer</b>:
+                        <ul>
+                            <li>IEEE Transactions on Knowledge and Data Engineering (TKDE)</li>
+                            <li>IEEE Transactions on Neural Networks and Learning Systems</li>
+                            <li>Bioinformatics</li>
+                            <li>Nature Scientific Reports</li>
+                            <li>ACM Transactions on Computing for Healthcare</li>
+                            <li>BMC Medical Informatics and Decision Making</li>
+                            <li>AMIA 2020</li>
+                            <li>BIBM 2018, 2020</li>
+                        </ul>
+                    </li>
+                    <li><b>External/Secondary Reviewer</b>:
+                        <ul>
+                            <li>KDD 2020, 2019</li>
+                            <li>Neurocomputing</li>
+                            <li>BMC Bioinformatics</li>
+                            <li>BMC Systems Biology</li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -46,7 +62,7 @@
         <div class="ui top attached">
             <div class="content">
                 <ul>
-                    <li>Aug 2019, SIGKDD 2019 Student Travel Award </li>
+                    <li>SIGKDD 2020, 2019 Student Travel Award</li>
                     <li>June 2018, Excellent Graduation Thesis Award of WHU (Scale: 5%)</li>
                     <li>May 2018, Outstanding Graduates of WHU (Scale: 10%)</li>
                     <li>2016-2017, LEI JUN Scholarship (Scale: Top1 Winner of National Scholarship, the highest prize for
