--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
 
 <!-- header -->
-<div class="ui fixed fitted top five item menu borderless">
+<div class="ui fixed fitted top four item menu borderless">
     <div class="ui container">
 
         <a class="item" href="/"><i class="home icon"></i>Home</a>
         <a class="item" href="publication"><i class="file text icon"></i>Publication</a>
-        <a class="item" href="talk"><i class="bell icon"></i>Talk</a>
+        <!--<a class="item" href="talk"><i class="bell icon"></i>Talk</a>-->
         <a class="item" href="misc"><i class="certificate icon"></i>Misc.</a>
         <a class="item" href="./Xiang%20Yue-CV.pdf" target="_blank"><i class="book icon"></i>CV</a>
 
@@ -53,8 +53,8 @@
                     <div class="content" id="bio-short">
                         <p>PhD student, The Ohio State University, OH, U.S.</p>
                         <p><i class="mail icon"></i>Email: yue.149 AT osu DOT edu </p>
-                        <p><i class="home icon"></i>Group: <a
-                                href="https://u.osu.edu/ihudas/" target="_blank">Honored to be part of the wonderful team!</a></p>
+                        <!--<p><i class="home icon"></i>Group: <a-->
+                        <!--href="https://u.osu.edu/ihudas/" target="_blank">Honored to be part of the wonderful team!</a></p>-->
 
                             <!--<i class="linkify icon"></i><a href="https://www.researchgate.net/profile/Xiang_Yue6" target="_blank">Researchgate</a>-->
 
@@ -62,9 +62,9 @@
                     </div>
                     <div class="description">
                         <i class="google icon"></i><a href="https://scholar.google.com/citations?hl=en&user=4jX_dI8AAAAJ" target="_blank">Google Scholar</a>
+                        <i class="github icon"></i><a href="https://github.com/xiangyue9607" target="_blank">Github</a>
                         <i class="linkedin icon"></i><a href="https://www.linkedin.com/in/xiang-yue-0704/" target="_blank">Linkedin</a>
                         <i class="book icon"></i><a href="./Xiang%20Yue-CV.pdf" target="_blank">Curriculum Vitae</a>
-                        <i class="github icon"></i><a href="https://github.com/xiangyue9607" target="_blank">Github</a>
 
                         <br>
                         <br>
@@ -79,19 +79,19 @@
             <div class="content">
                 <h3>Bio</h3>
                 <p>
-                    I'm currently a second-year PhD student in the <a href="https://cse.osu.edu/" target="_blank">Department
+                    I'm currently a third-year PhD student in the <a href="https://cse.osu.edu/" target="_blank">Department
                     of Computer Science and Engineering</a> at The Ohio State University (OSU). I'm fortunately working
                     with <a href="http://web.cse.ohio-state.edu/~sun.397/" target="_blank">Prof. Huan Sun</a> in <a href="https://u.osu.edu/ihudas/" target="_blank">SunLab</a>.
-                    I have broad interests in Data Mining and NLP, as well as their applications in real-world problems.
-                    Specifically, we are currently doing Information Extraction and Question Answering based on unstructured and structured
-                    clinical data. We aim to build machine learning models to help doctors and physicians do better clinical decision making.
+                    I have broad interests in NLP with the emphasis on Question Answering (QA) and Clinical NLP
+                    as well as Data Mining with the emphasis on Graph Embedding, Graph Mining and their applications in
+                    the biomedical and clinical doamin.
                 </p>
                 <p>
                     Prior to joining OSU, I received my B.E. in the <a href="http://cs.whu.edu.cn/" target="_blank">School
-                    of Computer Science</a> at Wuhan University (WHU), China in 2018. At WHU, I worked with <a href="http://zhangwenlab.cn/indexe.html">Prof. Wen Zhang</a> in
+                    of Computer Science</a> at Wuhan University (WHU), China in 2018. At WHU, I worked with <a
+                        href="http://zhangwenlab.cn/indexen.html">Prof. Wen Zhang</a> in
                     <a href="http://bioinfotech.cn/en/" target="_blank">Biomedical Big Data
-                        Mining Lab (BBDM-Lab)</a>. We adopted many data mining technologies, i.e. recommender systems, graph and
-                    network models to solve problems in medicine and biology.
+                        Mining Lab</a>.
                 </p>
 
 
@@ -101,6 +101,13 @@
             <div class="discription">
                 <h3>What's New</h3>
                 <ul>
+                    <li>[Sept 2020] - Our paper "PHICON: Improving Generalization of Clinical Text De-identification
+                        Models via Data Augmentation" has been accepted to EMNLP'20 Clinical NLP Workshop!
+                    <li>[July 2020] - Attended ACL 2020 and presented our Clinical Reading Comprehension work. Check out
+                        our
+                        <a href="https://slideslive.com/38929136/clinical-reading-comprehension-a-thorough-analysis-of-the-emrqa-dataset"
+                           target="_blank">slides and video</a>
+                    </li>
                     <li>[April 2020] - Our paper "Clinical Reading Comprehension: A Thorough Analysis of the emrQA Dataset" has been accepted to <b>ACL 2020</b>!
                         We conduct a comprehensive study on the Clinical Reading Comprehension task based on the recently-released <b>emrQA</b> dataset!
                     <li>[Sept 2019] - Our paper "Graph Embedding on Biomedical Networks: Methods, Applications, and Evaluations" has been accepted to <b>Bioinformatics</b>.
@@ -109,14 +116,14 @@
                     <li>[JUN 2019] - Attend GREAT <a href="http://ciss.deephack.me/" target="_blank">2nd Conversational Intelligence Summer School (CISS)</a> at UMASS Lowell.
                         Check our project "<a href="ciss_project" target="_blank">ACISSTANT: an intelligent CISS assistant bot!</a>"</li>
                     <li>[Apr 2019] - Our paper "Synonym Discovery on Privacy-Aware Clinical Data" has been accepted by <b>SIGKDD 2019</b></li>
-                    <li>[Nov 2018] - Our paper "LncRNA-Protein interaction prediction" has been accepted by <i><b><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">PLOS Computational Biology</a></b></i>!
-                    <li>[Oct 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by <i><b>APBC 2019</b></i> and <i><b>BIBM 2018</b></i></li>
-                    <li>[Sept 2018] - I will serve as a PC member for <a href="http://orienta.ugr.es/bibm2018/" target="_blank">BIBM 2018</a></li>
-                    <li>[Aug 2018] - Join <a href="https://cse.osu.edu/" target="_blank">OSU</a> and start the new journey!</li>
-                    <li>[June 2018] - Win Excellent Graduation Thesis Award of WHU (top 5%)</li>
-                    <li>[June 2018] - I gave an online talk about "Predicting drug-disease associations based on machine learning methods" <a href="./slide/pre_drug_dis_ml.pdf">[Slides]</a></li>
-                    <li>[May 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by<i><b> Methods</b></i> and <i><b>BMC Bioinformatics.</b></i></li>
-                    <li>[May 2018] - Win Outstanding Graduates of WHU (top 10%)</li>
+                    <!--<li>[Nov 2018] - Our paper "LncRNA-Protein interaction prediction" has been accepted by <i><b><a href="https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1006616" target="_blank">PLOS Computational Biology</a></b></i>!-->
+                    <!--<li>[Oct 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by <i><b>APBC 2019</b></i> and <i><b>BIBM 2018</b></i></li>-->
+                    <!--<li>[Sept 2018] - I will serve as a PC member for <a href="http://orienta.ugr.es/bibm2018/" target="_blank">BIBM 2018</a></li>-->
+                    <!--<li>[Aug 2018] - Join <a href="https://cse.osu.edu/" target="_blank">OSU</a> and start the new journey!</li>-->
+                    <!--<li>[June 2018] - Win Excellent Graduation Thesis Award of WHU (top 5%)</li>-->
+                    <!--<li>[June 2018] - I gave an online talk about "Predicting drug-disease associations based on machine learning methods" <a href="./slide/pre_drug_dis_ml.pdf">[Slides]</a></li>-->
+                    <!--<li>[May 2018] - Our two recent papers on "drug-disease associations prediction" have been accepted by<i><b> Methods</b></i> and <i><b>BMC Bioinformatics.</b></i></li>-->
+                    <!--<li>[May 2018] - Win Outstanding Graduates of WHU (top 10%)</li>-->
                     <!--<li>Nov.13 - Attend the conference <a href="https://muii.missouri.edu/bibm2017/" target="_blank">BIBM 2017</a> and-->
                         <!--give reports in Kansas City, MO, USA-->
                     <!--</li>-->
