--- a/publication.html
+++ b/publication.html
@@ -41,12 +41,13 @@
                     <h3 class="title">NLP (Question Answering, Clinical NLP)</h3>
 					<ul>
                         <li>
-                            <p><a href="/" target="_blank">PHICON: Improving Generalization of Clinical Text
+                            <p><a href="https://arxiv.org/abs/2010.05143" target="_blank">PHICON: Improving
+                                Generalization of Clinical Text
                                 De-identification Models via Data Augmentation</a><br>
                                 <b><u>Xiang Yue</u></b> and Shuang Zhou<br>
                                 <i><b>EMNLP 2020 The 3rd Clinical Natural Language Processing Workshop </b></i><br>
-                                <a href="/" target="_blank">[arXiv version]</a>
-                                <a href="https://github.com/xiangyue9607/PHICON" target="_blank">[Code]</a>
+                                <a href="https://arxiv.org/abs/2010.05143" target="_blank">[arXiv version]</a>
+                                <a href="https://github.com/betterzhou/PHICON" target="_blank">[Code]</a>
                             </p>
                         </li>
 
