--- a/publication.html
+++ b/publication.html
@@ -39,15 +39,16 @@
 
 				<div class="content">
                     <h3 class="title">NLP (Question Answering, Clinical NLP)</h3>
-					<ul>
+                    <p>*: Equal Contributions</p>
+                    <ul>
                         <li>
-                            <p><a href="https://arxiv.org/abs/2010.05143" target="_blank">PHICON: Improving
-                                Generalization of Clinical Text
-                                De-identification Models via Data Augmentation</a><br>
-                                <b><u>Xiang Yue</u></b> and Shuang Zhou<br>
-                                <i><b>EMNLP 2020 The 3rd Clinical Natural Language Processing Workshop </b></i><br>
-                                <a href="https://arxiv.org/abs/2010.05143" target="_blank">[arXiv version]</a>
-                                <a href="https://github.com/betterzhou/PHICON" target="_blank">[Code]</a>
+                            <p><a href="https://arxiv.org/abs/2010.16021" target="_blank">CliniQG4QA: Generating Diverse
+                                Questions for Domain Adaptation of Clinical Question Answering
+                            </a><br>
+                                <b><u>Xiang Yue</u></b>*, Xinliang Frederick Zhang*, Ziyu Yao, Simon Lin, Huan Sun<br>
+                                <i>Machine Learning for Health Workshop at NeurIPS 2020</i><br>
+                                <a href="https://arxiv.org/abs/2010.16021" target="_blank">[arXiv version]</a>
+                                <a href="https://github.com/sunlab-osu/CliniQG4QA" target="_blank">[Code]</a>
                             </p>
                         </li>
 
@@ -55,7 +56,8 @@
                             <p><a href="https://www.aclweb.org/anthology/2020.acl-main.410/" target="_blank">Clinical
                                 Reading Comprehension: A Thorough Analysis of the emrQA Dataset</a><br>
                                 <b><u>Xiang Yue</u></b>, Bernal Jimenez Gutierrez and Huan Sun<br>
-                                <i>The 58th Annual Meeting of the Association for Computational Linguistics<b> (ACL 2020, long paper)</b></i><br>
+                                <i>The 58th Annual Meeting of the Association for Computational Linguistics<b> (ACL
+                                    2020, long paper)</b></i><br>
                                 <a href="https://arxiv.org/abs/2005.00574" target="_blank">[arXiv version]</a>
                                 <a href="https://github.com/xiangyue9607/CliniRC" target="_blank">[Code]</a>
                                 <a href="https://slideslive.com/38929136/clinical-reading-comprehension-a-thorough-analysis-of-the-emrqa-dataset"
@@ -64,16 +66,48 @@
                         </li>
 
                         <li>
-                            <p><a href="https://arxiv.org/abs/2003.03235" target="_blank">Practical Annotation Strategies for Question Answering Datasets</a><br>
+                            <p><a href="https://arxiv.org/abs/2010.12800" target="_blank">COUGH: A Challenge Dataset
+                                and Models for COVID-19 FAQ Retrieval</a><br>
+                                Xinliang Frederick Zhang, Heming Sun, <b><u>Xiang Yue</u></b>, Emmett Jesrani, Simon
+                                Lin, Huan Sun<br>
+                                <i>arXiv Preprint</i><br>
+                                <a href="https://github.com/sunlab-osu/covid-faq" target="_blank">[Datasets]</a>
+                            </p>
+                        </li>
+
+                        <li>
+                            <p><a href="" target="_blank">Clinical Phrase Mining with Language Models</a><br>
+                                Kaushik Mani*, <b><u>Xiang Yue</u></b>*, Bernal Jimenez Gutierrez, Yungui Huang, Simon
+                                Lin, and Huan Sun<br>
+                                <i>IEEE Internatinal Conference on Bioinformatics and Biomedicine 2020 <b>(BIBM
+                                    2020)</b></i><br>
+                                <a href="" target="_blank">[arXiv extended version]</a>
+                                <a href="https://github.com/kaushikmani/PhraseMiningLM" target="_blank">[Code]</a>
+                            </p>
+                        </li>
+
+                        <li>
+                            <p><a href="https://arxiv.org/abs/2010.05143" target="_blank">PHICON: Improving
+                                Generalization of Clinical Text
+                                De-identification Models via Data Augmentation</a><br>
+                                <b><u>Xiang Yue</u></b> and Shuang Zhou<br>
+                                <i>The 3rd Clinical Natural Language Processing Workshop at EMNLP 2020</i><br>
+                                <a href="https://arxiv.org/abs/2010.05143" target="_blank">[arXiv version]</a>
+                                <a href="https://github.com/betterzhou/PHICON" target="_blank">[Code]</a>
+                            </p>
+                        </li>
+
+                        <li>
+                            <p><a href="https://arxiv.org/abs/2003.03235" target="_blank">Practical Annotation
+                                Strategies for Question Answering Datasets</a><br>
                                 Bernhard Kratzwald, <b><u>Xiang Yue</u></b>, Huan Sun and Stefan Feuerriegel<br>
-                                <i><b>arXiv Preprint</b></i><br>
+                                <i>arXiv Preprint</i><br>
                             </p>
                         </li>
                     </ul>
                     <div class="ui section divider"></div>
 
                     <h3 class="title">Data Mining (Graph Embedding, Graph Mining, Bioinformatics)</h3>
-                    <p>*: Equal Contributions</p>
                     <ul>
 
                         <li>
